--- a/pinyougou-common/pom.xml
+++ b/pinyougou-common/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pinyougou-common</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>pinyougou-common Maven Webapp</name>
     <!-- FIXME change it to the project's website -->
@@ -29,6 +29,19 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+<!--fastDFS图片上传-->
+        <dependency>
+            <groupId>org.csource.fastdfs</groupId>
+            <artifactId>fastdfs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <!--fastDFS图片上传end-->
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
