--- a/pinyougou-search-service/pom.xml
+++ b/pinyougou-search-service/pom.xml
@@ -93,6 +93,13 @@
             <artifactId>commons-codec</artifactId>
         </dependency>
 
+        <!--引入commons依赖-->
+        <dependency>
+            <groupId>com.jarvis</groupId>
+            <artifactId>pinyougou-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
 
 
