--- a/pinyougou-manager-web/pom.xml
+++ b/pinyougou-manager-web/pom.xml
@@ -132,18 +132,26 @@
         </dependency>
 
         <!--引入搜索接口-->
-        <dependency>
+     <!--   <dependency>
             <groupId>com.jarvis</groupId>
             <artifactId>pinyougou-search-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
         <!--页面静态化接口-->
-        <dependency>
+       <!-- <dependency>
             <groupId>com.jarvis</groupId>
             <artifactId>pinyougou-page-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>-->
+
+        <!--activemq-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
         </dependency>
+
     </dependencies>
 
     <build>
