--- a/pinyougou-search-service/pom.xml
+++ b/pinyougou-search-service/pom.xml
@@ -100,6 +100,14 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--activemq-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
+        </dependency>
+
+
 
 
 
