--- a/pinyougou-order-web/pom.xml
+++ b/pinyougou-order-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pinyougou-cart-web</artifactId>
+    <artifactId>pinyougou-order-web</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
@@ -83,7 +83,7 @@
 
         <dependency>
             <groupId>com.jarvis</groupId>
-            <artifactId>pinyougou-cart-interface</artifactId>
+            <artifactId>pinyougou-order-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -92,57 +92,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!--spring security-->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>4.1.0.RELEASE</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>4.1.0.RELEASE</version>
-        </dependency>
-        <!--end-->
-
-
-        <!--cas-->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-cas</artifactId>
-            <version>4.1.0.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jasig.cas.client</groupId>
-            <artifactId>cas-client-core</artifactId>
-            <version>3.3.3</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!--end-->
-
-        <!--引入user模快-->
-        <dependency>
-            <groupId>com.jarvis</groupId>
-            <artifactId>pinyougou-user-interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.jarvis</groupId>
-            <artifactId>pinyougou-order-interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
     </dependencies>
 
     <build>
-        <finalName>pinyougou-cart-web</finalName>
+        <finalName>pinyougou-order-web</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
@@ -177,6 +132,9 @@
             </plugins>
         </pluginManagement>
     </build>
+
+
+
 
 
 </project>
