--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
       <module>pinyougou-cart-interface</module>
     <module>pinyougou-cart-service</module>
     <module>pinyougou-cart-web</module>
+      <module>pinyougou-order-interface</module>
+    <module>pinyougou-order-service</module>
+    <module>pinyougou-order-web</module>
   </modules>
   <packaging>pom</packaging>
 
